--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-Practice project of fundamental ML topics such as neural network modeling and training with Microsoft's dataset of Dog and Cat images
+Practice project of fundamental ML topics such as neural network modeling and training with MNIST preprocessed data sets
+and Microsoft's Dog and Cat images
